--- a/briefly-static-content/css/global.css
+++ b/briefly-static-content/css/global.css
@@ -8,3 +8,15 @@ body {
 .navbar-brand .glyphicon {
   color: #00ff99;
 }
+
+/* Custom */
+.retell-entry {
+  margin-top: 1em;
+  border-top: 1px solid #d3d7cf;
+  padding-top: 0.5em;
+}
+
+.star-rating {
+  color: #f0ad4e;
+}
+
