Improving person-hints-page

--- a/briefly-static-content/css/global.css
+++ b/briefly-static-content/css/global.css
@@ -21,6 +21,15 @@ body {
 }
 
 
+
+/* Named Value Element (see coded-named-item) */
+
+.named-value-elem {
+  padding: 0.5em;
+  display: inline-block;
+}
+
+
 /* Favorites */
 
 .j-fav-link .star {
