--- a/briefly-static-content/css/global.css
+++ b/briefly-static-content/css/global.css
@@ -4,6 +4,19 @@ body {
     /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+
+/* Sign In Form */
+
+form.signin-form div {
+  min-height: 2em;
+}
+
+form.signin-form > div.button-holder {
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+
 /* Navbar icon */
 .navbar-brand .glyphicon {
   color: #ff9900;
