--- a/briefly-static-content/css/global.css
+++ b/briefly-static-content/css/global.css
@@ -115,6 +115,15 @@ table.item-info > tbody > tr > td:first-child {
   display: inline-block;
 }
 
+/* Item Details Table */
+
+.item-details > tbody > tr > td:first-child {
+  font-weight: bold;
+}
+
+.item-details > tbody > tr > td {
+  padding: 0.5rem;
+}
 
 /* Favorites */
 
